<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/misplantas"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/tareas"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_plagas"
        android:icon="@drawable/plagas"
        android:title="@string/title_plagas" />

    <item
        android:id="@+id/navigation_objetivos"
        android:icon="@drawable/objetivos"
        android:title="@string/title_objetivos" />

</menu>